# gas_detection_challenge

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration.ipynb  tree_model.ipynb
src/features/: setup_collab.py
src/models/: custom_functions.py
