[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gasses_detection_datachallenge"
version = "0.0.1"
description = "Repo containing my solution attempts to the data challenge proposed by ENS and bertin technologies on the detection of dangerous gasses"
authors = [
  { name = "jaime de la fuente" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"


[tool.ruff]
line-length = 99
src = ["gasses_detection_datachallenge"]
include = ["pyproject.toml", "gasses_detection_datachallenge/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gasses_detection_datachallenge"]
force-sort-within-sections = true

